# carquet

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: cpp.yml
benchmark/: benchmark_arrow_cpp.cpp  benchmark_carquet.c  run_benchmark.py
build-neon-off/: carquet  carquetConfig.cmake  test_advanced_api  test_bitunpack_wide  test_bloom_page_index  test_compression  test_core  test_edge_boundaries  test_edge_compression  test_edge_encodings  test_edge_io  test_edge_malformed  test_encoding_roundtrip  test_encodings  test_encodings_extended  test_large_schema  test_maturity  test_mmap  test_nested  test_production  test_reader  test_thrift  test_utils  test_writer_extensions
docs/: error-handling.md  reading.md  writing.md
fuzz/: README.md  fuzz_encodings.c  fuzz_reader.c  fuzz_roundtrip.c  fuzz_writer.c
include/carquet/: carquet.h  types.h
interop/: interop_0.4.1_darwin_arm64_20260507.json
profiling/: profile_micro.c  profile_write.c
src/cli/: cli.h  codegen_read.c  commands.c  main.c
src/compression/: gzip.c  snappy.c  zstd.c
src/core/: allocator.c  allocator.h  arena.c  bitpack.c  bitpack.h  buffer.c  compat.h  error.c  float16.h  geo_wkb.c  geo_wkb.h  helpers.c  version.c
src/encoding/: byte_stream_split.c  delta.c  delta_length.c  delta_strings.c  dictionary.c  rle.c  rle.h
src/metadata/: bloom_filter.c  page_index.c  schema.c  statistics.c
src/reader/: batch_reader.c  buffer_reader.c  column_reader.c  file_reader.c  mmap_reader.c  page_reader.c  reader_internal.h  row_group_reader.c  statistics.c  worker_pool.c  worker_pool.h
src/simd/: detect.c  dispatch.c  simd_unaligned.h
src/simd/arm/: crc32_arm.c  neon_ops.c  sve_ops.c
src/simd/wasm/: wasm128_ops.c
src/simd/x86/: avx2_ops.c  avx512_ops.c  sse_ops.c
src/thrift/: parquet_types.c  parquet_types.h  thrift_decode.c
src/util/: crc32.c
src/writer/: arrow_schema.c  arrow_schema.h  column_writer.c  file_writer.c  page_writer.c  row_group_writer.c
tests/: node_wasm_real_parquet.mjs  test_advanced_api.c  test_bitunpack_wide.c  test_bloom_page_index.c  test_core.c  test_edge_io.c  test_encoding_roundtrip.c  test_maturity.c  test_mmap.c  test_production.c  test_thrift.c  test_utils.c  test_writer_extensions.c  wasip2_component_exports.c  wasm128_external_link.c  wasm_external_link.c  wasm_real_parquet_fixture.c  wasm_real_parquet_probe.c
wit/: README.md  carquet.wit  crawl-c-api.py  generate-c-bindings.sh
wit-api/: carquet-api.wit
